--- a/k8s/master.yaml
+++ b/k8s/master.yaml
@@ -28,14 +28,15 @@ spec:
     spec:
       containers:
         - name: master
-          image: my-mr:0.1
+          image: my-mr:0.3
           imagePullPolicy: IfNotPresent
           env:
             - name: MR_LISTEN_ADDR
               value: "0.0.0.0:1234"
           ports:
             - containerPort: 1234
-          args: ["/data/input.pdf"]
+          workingDir: /data
+          args: ["input.pdf"]
           volumeMounts:
             - name: data
               mountPath: /data
